# rhetorical-misalignment

./: .gitignore  README.md  agent_inference.py  agent_presentation.py  agent_selection.py  analyze.py  client.py  compare.py  generator.py  information_aggregation.py  main.py  principal_inference.py  pyproject.toml  scripts.sh  simulation.py  simulation_controlled.py  verifier.py
agents/: agent.py  base.py  principal.py
analysis/: analyze_cross_model.py  analyze_factual_persuasion.py  analyze_martingale.py  analyze_model_accuracy_persuasion.py  analyze_principal_accuracy.py  analyze_sft_dpo_disagreements.py
annotation/: ANNOTATION_IMPROVEMENTS.md  MODEL_SPECIFIC_TRACKING.md  QUICK_START.md  README.md  SETUP_COMPLETE.md  USAGE.md  analyze_coverage.py  annotation_utils.py  app.py  config.py  data_loader.py  preview_output.txt  scheduler.py  start.sh  test_app.py  test_markdown.py
core/: agent_inference.py  agent_presentation.py  agent_selection.py  principal_inference.py
datasets/: README.md  decision.ipynb  explore.py  load.py  old_bailey.json
experiments/: USMLE_PARSER_README.md  aggregate_information.py  analyze_belief_distributions.py  analyze_clinical_questions.py  analyze_cross_model.py  analyze_harms.py  analyze_martingale_comparison.py  analyze_martingale_reliability.py  analyze_mimic.py  analyze_paraphrase.py  analyze_principal_accuracy.py  analyze_principals.py  analyze_usmle.py  analyze_usmle_sample.py  analyze_usmle_sample_stats.py  compare_usmle_sample.py  evaluate_usmle.py  generate.py  generate_clinical_questions.py  generate_mimic.py  hypothesis.py  (+10 more)
(+1627 files in other folders)
